fix(playground): prevent horizontal scrollbar on ios device frame view

--- a/src/components/global/Playground/playground.css
+++ b/src/components/global/Playground/playground.css
@@ -208,8 +208,10 @@
   width: 0%;
 }
 
-.playground .frame-visible {
-  width: 100%;
+@media only screen and (max-width: 600px) {
+  .playground .frame-visible {
+    width: 100%;
+  }
 }
 
 /** Tabs **/
